--- a/nyonoyo/96813-holomess-un-gama-tetris/rus.textile
+++ b/nyonoyo/96813-holomess-un-gama-tetris/rus.textile
@@ -1,102 +1,102 @@
-HoloMess ~Ун-Гама Тетрис~
+HoloMess ~РЈРЅ-Р“Р°РјР° РўРµС‚СЂРёСЃ~
 
-Добавить Автора
+РђРІС‚РѕСЂ: nyonoyo
 
 *000*2024-01-10 01:15
 
-Я не умер! Прошло много времени с тех пор, как я последний раз публиковал сообщения, но в основном я навёл порядок в своей жизни, и у меня появилось больше свободного времени и мотивации пис*ть снова. Надеюсь, вам понравится эта история. Обещаю, следующий не займёт так много времени!
+РЇ РЅРµ СѓРјРµСЂ! РџСЂРѕС€Р»Рѕ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё СЃ С‚РµС… РїРѕСЂ, РєР°Рє СЏ РїРѕСЃР»РµРґРЅРёР№ СЂР°Р· РїСѓР±Р»РёРєРѕРІР°Р» СЃРѕРѕР±С‰РµРЅРёСЏ, РЅРѕ РІ РѕСЃРЅРѕРІРЅРѕРј СЏ РЅР°РІС‘Р» РїРѕСЂСЏРґРѕРє РІ СЃРІРѕРµР№ Р¶РёР·РЅРё, Рё Сѓ РјРµРЅСЏ РїРѕСЏРІРёР»РѕСЃСЊ Р±РѕР»СЊС€Рµ СЃРІРѕР±РѕРґРЅРѕРіРѕ РІСЂРµРјРµРЅРё Рё РјРѕС‚РёРІР°С†РёРё РїРёСЃ*С‚СЊ СЃРЅРѕРІР°. РќР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ СЌС‚Р° РёСЃС‚РѕСЂРёСЏ. РћР±РµС‰Р°СЋ, СЃР»РµРґСѓСЋС‰РёР№ РЅРµ Р·Р°Р№РјС‘С‚ С‚Р°Рє РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё!
 
-«Привет, Мастер! Вантама!»
+В«РџСЂРёРІРµС‚, РњР°СЃС‚РµСЂ! Р’Р°РЅС‚Р°РјР°!В»
 
-«Кон Кон Кицунэ!»
+В«РљРѕРЅ РљРѕРЅ РљРёС†СѓРЅСЌ!В»
 
-«Кон~ Бан~ Васой!»
+В«РљРѕРЅ~ Р‘Р°РЅ~ Р’Р°СЃРѕР№!В»
 
-«Прошло много времени с тех пор, как мы делали что-то подобное, поэтому я надеюсь, что вы все в восторге!» Переодевающийся мальчик-собака Инуяма Тамаки приветствовал новых зрителей на трансляции, создавая онлайн-лобби Тетриса. К нему присоединились в приветствии зрителей Сираками Фубуки и Нацуиро Мацури, вернувшиеся ветераны серии Endurance Tetris Тамаки. Правила игры были просты. Стримеры соревновались друг с другом в игре, сдерживая желание попис*ть. После завершения раунда всем участникам, кроме победителя, придётся выполнить задание, которое усилит их отчаяние. Этот цикл будет продолжаться до тех пор, пока игрок не обмочится.
+В«РџСЂРѕС€Р»Рѕ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё СЃ С‚РµС… РїРѕСЂ, РєР°Рє РјС‹ РґРµР»Р°Р»Рё С‡С‚Рѕ-С‚Рѕ РїРѕРґРѕР±РЅРѕРµ, РїРѕСЌС‚РѕРјСѓ СЏ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ РІС‹ РІСЃРµ РІ РІРѕСЃС‚РѕСЂРіРµ!В» РџРµСЂРµРѕРґРµРІР°СЋС‰РёР№СЃСЏ РјР°Р»СЊС‡РёРє-СЃРѕР±Р°РєР° РРЅСѓСЏРјР° РўР°РјР°РєРё РїСЂРёРІРµС‚СЃС‚РІРѕРІР°Р» РЅРѕРІС‹С… Р·СЂРёС‚РµР»РµР№ РЅР° С‚СЂР°РЅСЃР»СЏС†РёРё, СЃРѕР·РґР°РІР°СЏ РѕРЅР»Р°Р№РЅ-Р»РѕР±Р±Рё РўРµС‚СЂРёСЃР°. Рљ РЅРµРјСѓ РїСЂРёСЃРѕРµРґРёРЅРёР»РёСЃСЊ РІ РїСЂРёРІРµС‚СЃС‚РІРёРё Р·СЂРёС‚РµР»РµР№ РЎРёСЂР°РєР°РјРё Р¤СѓР±СѓРєРё Рё РќР°С†СѓРёСЂРѕ РњР°С†СѓСЂРё, РІРµСЂРЅСѓРІС€РёРµСЃСЏ РІРµС‚РµСЂР°РЅС‹ СЃРµСЂРёРё Endurance Tetris РўР°РјР°РєРё. РџСЂР°РІРёР»Р° РёРіСЂС‹ Р±С‹Р»Рё РїСЂРѕСЃС‚С‹. РЎС‚СЂРёРјРµСЂС‹ СЃРѕСЂРµРІРЅРѕРІР°Р»РёСЃСЊ РґСЂСѓРі СЃ РґСЂСѓРіРѕРј РІ РёРіСЂРµ, СЃРґРµСЂР¶РёРІР°СЏ Р¶РµР»Р°РЅРёРµ РїРѕРїРёСЃ*С‚СЊ. РџРѕСЃР»Рµ Р·Р°РІРµСЂС€РµРЅРёСЏ СЂР°СѓРЅРґР° РІСЃРµРј СѓС‡Р°СЃС‚РЅРёРєР°Рј, РєСЂРѕРјРµ РїРѕР±РµРґРёС‚РµР»СЏ, РїСЂРёРґС‘С‚СЃСЏ РІС‹РїРѕР»РЅРёС‚СЊ Р·Р°РґР°РЅРёРµ, РєРѕС‚РѕСЂРѕРµ СѓСЃРёР»РёС‚ РёС… РѕС‚С‡Р°СЏРЅРёРµ. Р­С‚РѕС‚ С†РёРєР» Р±СѓРґРµС‚ РїСЂРѕРґРѕР»Р¶Р°С‚СЊСЃСЏ РґРѕ С‚РµС… РїРѕСЂ, РїРѕРєР° РёРіСЂРѕРє РЅРµ РѕР±РјРѕС‡РёС‚СЃСЏ.
 
-— Да, это действительно так, — нервно согласился Фубуки. Несмотря на то, что она уже однажды обмочилась во время игрового шоу Тамаки, она не хотела, чтобы в ней были какие-либо другие несчастные случаи. Однако это был не единственный фактор. Чтобы отпраздновать возвращение своего шоу, Тамаки решил поднять ставку; вместо того, чтобы держать мочевой пузырь, они боролись с желанием какать. Это не воодушевило девушку-лисицу, особенно учитывая «происшествие», случившееся пару лет назад. При этом была причина, по которой она знала, что вход в эпизод возрождения будет безопасным, и она смотрела прямо на эту причину.
+вЂ” Р”Р°, СЌС‚Рѕ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С‚Р°Рє, вЂ” РЅРµСЂРІРЅРѕ СЃРѕРіР»Р°СЃРёР»СЃСЏ Р¤СѓР±СѓРєРё. РќРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РѕРЅР° СѓР¶Рµ РѕРґРЅР°Р¶РґС‹ РѕР±РјРѕС‡РёР»Р°СЃСЊ РІРѕ РІСЂРµРјСЏ РёРіСЂРѕРІРѕРіРѕ С€РѕСѓ РўР°РјР°РєРё, РѕРЅР° РЅРµ С…РѕС‚РµР»Р°, С‡С‚РѕР±С‹ РІ РЅРµР№ Р±С‹Р»Рё РєР°РєРёРµ-Р»РёР±Рѕ РґСЂСѓРіРёРµ РЅРµСЃС‡Р°СЃС‚РЅС‹Рµ СЃР»СѓС‡Р°Рё. РћРґРЅР°РєРѕ СЌС‚Рѕ Р±С‹Р» РЅРµ РµРґРёРЅСЃС‚РІРµРЅРЅС‹Р№ С„Р°РєС‚РѕСЂ. Р§С‚РѕР±С‹ РѕС‚РїСЂР°Р·РґРЅРѕРІР°С‚СЊ РІРѕР·РІСЂР°С‰РµРЅРёРµ СЃРІРѕРµРіРѕ С€РѕСѓ, РўР°РјР°РєРё СЂРµС€РёР» РїРѕРґРЅСЏС‚СЊ СЃС‚Р°РІРєСѓ; РІРјРµСЃС‚Рѕ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РґРµСЂР¶Р°С‚СЊ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ, РѕРЅРё Р±РѕСЂРѕР»РёСЃСЊ СЃ Р¶РµР»Р°РЅРёРµРј РєР°РєР°С‚СЊ. Р­С‚Рѕ РЅРµ РІРѕРѕРґСѓС€РµРІРёР»Рѕ РґРµРІСѓС€РєСѓ-Р»РёСЃРёС†Сѓ, РѕСЃРѕР±РµРЅРЅРѕ СѓС‡РёС‚С‹РІР°СЏ В«РїСЂРѕРёСЃС€РµСЃС‚РІРёРµВ», СЃР»СѓС‡РёРІС€РµРµСЃСЏ РїР°СЂСѓ Р»РµС‚ РЅР°Р·Р°Рґ. РџСЂРё СЌС‚РѕРј Р±С‹Р»Р° РїСЂРёС‡РёРЅР°, РїРѕ РєРѕС‚РѕСЂРѕР№ РѕРЅР° Р·РЅР°Р»Р°, С‡С‚Рѕ РІС…РѕРґ РІ СЌРїРёР·РѕРґ РІРѕР·СЂРѕР¶РґРµРЅРёСЏ Р±СѓРґРµС‚ Р±РµР·РѕРїР°СЃРЅС‹Рј, Рё РѕРЅР° СЃРјРѕС‚СЂРµР»Р° РїСЂСЏРјРѕ РЅР° СЌС‚Сѓ РїСЂРёС‡РёРЅСѓ.
 
-«Хе-хе, это будет торт!» — заявил Мацури. Эксцентричная чирлидерша говорила о большой игре, но на самом деле у неё был худший результат среди всех участников Endurance Tetris. Из двенадцати раз, когда она участвовала в соревнованиях, девять раз она сидела в луже собственной мочи. Не говоря уже о тех случаях, когда она обмочилась во время струи и вне её, не спровоцированная ничем, кроме её самоуверенности в своём мочевом пузыре. «Не делайте ошибок, какашки совершенно другие», — заявила она, когда в чате Тамаки она была признана предполагаемым проигравшим. «Я не обосрался с самого детства! Это больше, чем можно сказать о госпоже Пупи Штаны, — пошутил Мацури, заставив Фубуки покраснеть быстрее, чем раскалённое железо.
+В«РҐРµ-С…Рµ, СЌС‚Рѕ Р±СѓРґРµС‚ С‚РѕСЂС‚!В» вЂ” Р·Р°СЏРІРёР» РњР°С†СѓСЂРё. Р­РєСЃС†РµРЅС‚СЂРёС‡РЅР°СЏ С‡РёСЂР»РёРґРµСЂС€Р° РіРѕРІРѕСЂРёР»Р° Рѕ Р±РѕР»СЊС€РѕР№ РёРіСЂРµ, РЅРѕ РЅР° СЃР°РјРѕРј РґРµР»Рµ Сѓ РЅРµС‘ Р±С‹Р» С…СѓРґС€РёР№ СЂРµР·СѓР»СЊС‚Р°С‚ СЃСЂРµРґРё РІСЃРµС… СѓС‡Р°СЃС‚РЅРёРєРѕРІ Endurance Tetris. РР· РґРІРµРЅР°РґС†Р°С‚Рё СЂР°Р·, РєРѕРіРґР° РѕРЅР° СѓС‡Р°СЃС‚РІРѕРІР°Р»Р° РІ СЃРѕСЂРµРІРЅРѕРІР°РЅРёСЏС…, РґРµРІСЏС‚СЊ СЂР°Р· РѕРЅР° СЃРёРґРµР»Р° РІ Р»СѓР¶Рµ СЃРѕР±СЃС‚РІРµРЅРЅРѕР№ РјРѕС‡Рё. РќРµ РіРѕРІРѕСЂСЏ СѓР¶Рµ Рѕ С‚РµС… СЃР»СѓС‡Р°СЏС…, РєРѕРіРґР° РѕРЅР° РѕР±РјРѕС‡РёР»Р°СЃСЊ РІРѕ РІСЂРµРјСЏ СЃС‚СЂСѓРё Рё РІРЅРµ РµС‘, РЅРµ СЃРїСЂРѕРІРѕС†РёСЂРѕРІР°РЅРЅР°СЏ РЅРёС‡РµРј, РєСЂРѕРјРµ РµС‘ СЃР°РјРѕСѓРІРµСЂРµРЅРЅРѕСЃС‚Рё РІ СЃРІРѕС‘Рј РјРѕС‡РµРІРѕРј РїСѓР·С‹СЂРµ. В«РќРµ РґРµР»Р°Р№С‚Рµ РѕС€РёР±РѕРє, РєР°РєР°С€РєРё СЃРѕРІРµСЂС€РµРЅРЅРѕ РґСЂСѓРіРёРµВ», вЂ” Р·Р°СЏРІРёР»Р° РѕРЅР°, РєРѕРіРґР° РІ С‡Р°С‚Рµ РўР°РјР°РєРё РѕРЅР° Р±С‹Р»Р° РїСЂРёР·РЅР°РЅР° РїСЂРµРґРїРѕР»Р°РіР°РµРјС‹Рј РїСЂРѕРёРіСЂР°РІС€РёРј. В«РЇ РЅРµ РѕР±РѕСЃСЂР°Р»СЃСЏ СЃ СЃР°РјРѕРіРѕ РґРµС‚СЃС‚РІР°! Р­С‚Рѕ Р±РѕР»СЊС€Рµ, С‡РµРј РјРѕР¶РЅРѕ СЃРєР°Р·Р°С‚СЊ Рѕ РіРѕСЃРїРѕР¶Рµ РџСѓРїРё РЁС‚Р°РЅС‹, вЂ” РїРѕС€СѓС‚РёР» РњР°С†СѓСЂРё, Р·Р°СЃС‚Р°РІРёРІ Р¤СѓР±СѓРєРё РїРѕРєСЂР°СЃРЅРµС‚СЊ Р±С‹СЃС‚СЂРµРµ, С‡РµРј СЂР°СЃРєР°Р»С‘РЅРЅРѕРµ Р¶РµР»РµР·Рѕ.
 
-— Т-заткнись! Это было только один раз!» она отклонилась. «Это нечестно! Меня буквально до чёртиков напугали…»
+вЂ” Рў-Р·Р°С‚РєРЅРёСЃСЊ! Р­С‚Рѕ Р±С‹Р»Рѕ С‚РѕР»СЊРєРѕ РѕРґРёРЅ СЂР°Р·!В» РѕРЅР° РѕС‚РєР»РѕРЅРёР»Р°СЃСЊ. В«Р­С‚Рѕ РЅРµС‡РµСЃС‚РЅРѕ! РњРµРЅСЏ Р±СѓРєРІР°Р»СЊРЅРѕ РґРѕ С‡С‘СЂС‚РёРєРѕРІ РЅР°РїСѓРіР°Р»РёвЂ¦В»
 
-«Хватит, дамы, скоро у вас обоих будет возможность доказать, что вам не нужны подгузники». Обе девушки посмотрели на Тамаки, явно не удивившись. — Ладно, чат, суть ты знаешь. Играем в тетрис, победителя каждого раунда спасают от наказания, проигравшие пьют воду, и так до тех пор, пока кто-нибудь не обмочится. Однако на этот раз всё будет немного по-другому, поскольку на кону будут наши кишки. Во-первых, сегодня мы все трижды поели, чтобы убедиться, что это не будет длиться вечно». Пока он это говорил, фембой вытаскивает маленькое колесо рулетки и ставит его рядом с собой.
+В«РҐРІР°С‚РёС‚, РґР°РјС‹, СЃРєРѕСЂРѕ Сѓ РІР°СЃ РѕР±РѕРёС… Р±СѓРґРµС‚ РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РґРѕРєР°Р·Р°С‚СЊ, С‡С‚Рѕ РІР°Рј РЅРµ РЅСѓР¶РЅС‹ РїРѕРґРіСѓР·РЅРёРєРёВ». РћР±Рµ РґРµРІСѓС€РєРё РїРѕСЃРјРѕС‚СЂРµР»Рё РЅР° РўР°РјР°РєРё, СЏРІРЅРѕ РЅРµ СѓРґРёРІРёРІС€РёСЃСЊ. вЂ” Р›Р°РґРЅРѕ, С‡Р°С‚, СЃСѓС‚СЊ С‚С‹ Р·РЅР°РµС€СЊ. РРіСЂР°РµРј РІ С‚РµС‚СЂРёСЃ, РїРѕР±РµРґРёС‚РµР»СЏ РєР°Р¶РґРѕРіРѕ СЂР°СѓРЅРґР° СЃРїР°СЃР°СЋС‚ РѕС‚ РЅР°РєР°Р·Р°РЅРёСЏ, РїСЂРѕРёРіСЂР°РІС€РёРµ РїСЊСЋС‚ РІРѕРґСѓ, Рё С‚Р°Рє РґРѕ С‚РµС… РїРѕСЂ, РїРѕРєР° РєС‚Рѕ-РЅРёР±СѓРґСЊ РЅРµ РѕР±РјРѕС‡РёС‚СЃСЏ. РћРґРЅР°РєРѕ РЅР° СЌС‚РѕС‚ СЂР°Р· РІСЃС‘ Р±СѓРґРµС‚ РЅРµРјРЅРѕРіРѕ РїРѕ-РґСЂСѓРіРѕРјСѓ, РїРѕСЃРєРѕР»СЊРєСѓ РЅР° РєРѕРЅСѓ Р±СѓРґСѓС‚ РЅР°С€Рё РєРёС€РєРё. Р’Рѕ-РїРµСЂРІС‹С…, СЃРµРіРѕРґРЅСЏ РјС‹ РІСЃРµ С‚СЂРёР¶РґС‹ РїРѕРµР»Рё, С‡С‚РѕР±С‹ СѓР±РµРґРёС‚СЊСЃСЏ, С‡С‚Рѕ СЌС‚Рѕ РЅРµ Р±СѓРґРµС‚ РґР»РёС‚СЊСЃСЏ РІРµС‡РЅРѕВ». РџРѕРєР° РѕРЅ СЌС‚Рѕ РіРѕРІРѕСЂРёР», С„РµРјР±РѕР№ РІС‹С‚Р°СЃРєРёРІР°РµС‚ РјР°Р»РµРЅСЊРєРѕРµ РєРѕР»РµСЃРѕ СЂСѓР»РµС‚РєРё Рё СЃС‚Р°РІРёС‚ РµРіРѕ СЂСЏРґРѕРј СЃ СЃРѕР±РѕР№.
 
-«Аааа, у нас есть колесо наказаний! После каждого раунда я буду крутить колесо в конце каждого раунда, и то, на что оно упадёт, будет наказанием проигравшим!» В чате рассылались аплодисменты смайликов, в то время как другие ютуберы стонали, уже зная, что находится на колесе, поскольку им нужно было подготовить предметы заранее. У них были сомнения по поводу участия, но Тамаки уже заплатил им изрядную сумму за участие, так что отступать было уже слишком поздно. «Хм, давайте посмотрим… Слабительные, чернослив, приседания и множество других трюков, которые помогут добиться успеха! Я взволнован, а вы, девочки?»
+В«РђР°Р°Р°, Сѓ РЅР°СЃ РµСЃС‚СЊ РєРѕР»РµСЃРѕ РЅР°РєР°Р·Р°РЅРёР№! РџРѕСЃР»Рµ РєР°Р¶РґРѕРіРѕ СЂР°СѓРЅРґР° СЏ Р±СѓРґСѓ РєСЂСѓС‚РёС‚СЊ РєРѕР»РµСЃРѕ РІ РєРѕРЅС†Рµ РєР°Р¶РґРѕРіРѕ СЂР°СѓРЅРґР°, Рё С‚Рѕ, РЅР° С‡С‚Рѕ РѕРЅРѕ СѓРїР°РґС‘С‚, Р±СѓРґРµС‚ РЅР°РєР°Р·Р°РЅРёРµРј РїСЂРѕРёРіСЂР°РІС€РёРј!В» Р’ С‡Р°С‚Рµ СЂР°СЃСЃС‹Р»Р°Р»РёСЃСЊ Р°РїР»РѕРґРёСЃРјРµРЅС‚С‹ СЃРјР°Р№Р»РёРєРѕРІ, РІ С‚Рѕ РІСЂРµРјСЏ РєР°Рє РґСЂСѓРіРёРµ СЋС‚СѓР±РµСЂС‹ СЃС‚РѕРЅР°Р»Рё, СѓР¶Рµ Р·РЅР°СЏ, С‡С‚Рѕ РЅР°С…РѕРґРёС‚СЃСЏ РЅР° РєРѕР»РµСЃРµ, РїРѕСЃРєРѕР»СЊРєСѓ РёРј РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РїРѕРґРіРѕС‚РѕРІРёС‚СЊ РїСЂРµРґРјРµС‚С‹ Р·Р°СЂР°РЅРµРµ. РЈ РЅРёС… Р±С‹Р»Рё СЃРѕРјРЅРµРЅРёСЏ РїРѕ РїРѕРІРѕРґСѓ СѓС‡Р°СЃС‚РёСЏ, РЅРѕ РўР°РјР°РєРё СѓР¶Рµ Р·Р°РїР»Р°С‚РёР» РёРј РёР·СЂСЏРґРЅСѓСЋ СЃСѓРјРјСѓ Р·Р° СѓС‡Р°СЃС‚РёРµ, С‚Р°Рє С‡С‚Рѕ РѕС‚СЃС‚СѓРїР°С‚СЊ Р±С‹Р»Рѕ СѓР¶Рµ СЃР»РёС€РєРѕРј РїРѕР·РґРЅРѕ. В«РҐРј, РґР°РІР°Р№С‚Рµ РїРѕСЃРјРѕС‚СЂРёРјвЂ¦ РЎР»Р°Р±РёС‚РµР»СЊРЅС‹Рµ, С‡РµСЂРЅРѕСЃР»РёРІ, РїСЂРёСЃРµРґР°РЅРёСЏ Рё РјРЅРѕР¶РµСЃС‚РІРѕ РґСЂСѓРіРёС… С‚СЂСЋРєРѕРІ, РєРѕС‚РѕСЂС‹Рµ РїРѕРјРѕРіСѓС‚ РґРѕР±РёС‚СЊСЃСЏ СѓСЃРїРµС…Р°! РЇ РІР·РІРѕР»РЅРѕРІР°РЅ, Р° РІС‹, РґРµРІРѕС‡РєРё?В»
 
-«Принеси это!» Мацури пристегнулась, её гордость затмила её достоинство.
+В«РџСЂРёРЅРµСЃРё СЌС‚Рѕ!В» РњР°С†СѓСЂРё РїСЂРёСЃС‚РµРіРЅСѓР»Р°СЃСЊ, РµС‘ РіРѕСЂРґРѕСЃС‚СЊ Р·Р°С‚РјРёР»Р° РµС‘ РґРѕСЃС‚РѕРёРЅСЃС‚РІРѕ.
 
-— Д-да… — прохрипела Фубуки, не такая воодушевлённая, как её родственница.
+вЂ” Р”-РґР°вЂ¦ вЂ” РїСЂРѕС…СЂРёРїРµР»Р° Р¤СѓР±СѓРєРё, РЅРµ С‚Р°РєР°СЏ РІРѕРѕРґСѓС€РµРІР»С‘РЅРЅР°СЏ, РєР°Рє РµС‘ СЂРѕРґСЃС‚РІРµРЅРЅРёС†Р°.
 
-«Ладно, возьмём!» Тамаки начал первый раунд. Игра уже была интересной, поскольку ютуберы выяснили, какие стратегии они хотят использовать. Тамаки и Фубуки выбрали расстановку «4 ширины», в то время как Мацури предпочёл сохранить простоту и нацелен исключительно на зачистку тетрис. По общему признанию, игра была гораздо более равной, чем обычно, возможно, потому, что ставки были намного выше, чем обычно, или просто потому, что не было некоего синеволосого идола, который мог бы доминировать над ними всеми. Однако, в конце концов, мальчик-собака вышел на первое место, высунув язык двум другим, чтобы отпраздновать это событие.
+В«Р›Р°РґРЅРѕ, РІРѕР·СЊРјС‘Рј!В» РўР°РјР°РєРё РЅР°С‡Р°Р» РїРµСЂРІС‹Р№ СЂР°СѓРЅРґ. РРіСЂР° СѓР¶Рµ Р±С‹Р»Р° РёРЅС‚РµСЂРµСЃРЅРѕР№, РїРѕСЃРєРѕР»СЊРєСѓ СЋС‚СѓР±РµСЂС‹ РІС‹СЏСЃРЅРёР»Рё, РєР°РєРёРµ СЃС‚СЂР°С‚РµРіРёРё РѕРЅРё С…РѕС‚СЏС‚ РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ. РўР°РјР°РєРё Рё Р¤СѓР±СѓРєРё РІС‹Р±СЂР°Р»Рё СЂР°СЃСЃС‚Р°РЅРѕРІРєСѓ В«4 С€РёСЂРёРЅС‹В», РІ С‚Рѕ РІСЂРµРјСЏ РєР°Рє РњР°С†СѓСЂРё РїСЂРµРґРїРѕС‡С‘Р» СЃРѕС…СЂР°РЅРёС‚СЊ РїСЂРѕСЃС‚РѕС‚Сѓ Рё РЅР°С†РµР»РµРЅ РёСЃРєР»СЋС‡РёС‚РµР»СЊРЅРѕ РЅР° Р·Р°С‡РёСЃС‚РєСѓ С‚РµС‚СЂРёСЃ. РџРѕ РѕР±С‰РµРјСѓ РїСЂРёР·РЅР°РЅРёСЋ, РёРіСЂР° Р±С‹Р»Р° РіРѕСЂР°Р·РґРѕ Р±РѕР»РµРµ СЂР°РІРЅРѕР№, С‡РµРј РѕР±С‹С‡РЅРѕ, РІРѕР·РјРѕР¶РЅРѕ, РїРѕС‚РѕРјСѓ, С‡С‚Рѕ СЃС‚Р°РІРєРё Р±С‹Р»Рё РЅР°РјРЅРѕРіРѕ РІС‹С€Рµ, С‡РµРј РѕР±С‹С‡РЅРѕ, РёР»Рё РїСЂРѕСЃС‚Рѕ РїРѕС‚РѕРјСѓ, С‡С‚Рѕ РЅРµ Р±С‹Р»Рѕ РЅРµРєРѕРµРіРѕ СЃРёРЅРµРІРѕР»РѕСЃРѕРіРѕ РёРґРѕР»Р°, РєРѕС‚РѕСЂС‹Р№ РјРѕРі Р±С‹ РґРѕРјРёРЅРёСЂРѕРІР°С‚СЊ РЅР°Рґ РЅРёРјРё РІСЃРµРјРё. РћРґРЅР°РєРѕ, РІ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ, РјР°Р»СЊС‡РёРє-СЃРѕР±Р°РєР° РІС‹С€РµР» РЅР° РїРµСЂРІРѕРµ РјРµСЃС‚Рѕ, РІС‹СЃСѓРЅСѓРІ СЏР·С‹Рє РґРІСѓРј РґСЂСѓРіРёРј, С‡С‚РѕР±С‹ РѕС‚РїСЂР°Р·РґРЅРѕРІР°С‚СЊ СЌС‚Рѕ СЃРѕР±С‹С‚РёРµ.
 
-«Блин!» — воскликнула Мацури, подпрыгнув от разочарования, её юбка приподнялась, на мгновение обнажая трусики сквозь колготки.
+В«Р‘Р»РёРЅ!В» вЂ” РІРѕСЃРєР»РёРєРЅСѓР»Р° РњР°С†СѓСЂРё, РїРѕРґРїСЂС‹РіРЅСѓРІ РѕС‚ СЂР°Р·РѕС‡Р°СЂРѕРІР°РЅРёСЏ, РµС‘ СЋР±РєР° РїСЂРёРїРѕРґРЅСЏР»Р°СЃСЊ, РЅР° РјРіРЅРѕРІРµРЅРёРµ РѕР±РЅР°Р¶Р°СЏ С‚СЂСѓСЃРёРєРё СЃРєРІРѕР·СЊ РєРѕР»РіРѕС‚РєРё.
 
-«Вам не обязательно сообщать всем, что вы носите полоски, чтобы выплеснуть свой гнев, понимаете?» Фубуки ткнул, заставив брюнетку смущённо сесть и немного опустить юбку.
+В«Р’Р°Рј РЅРµ РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ СЃРѕРѕР±С‰Р°С‚СЊ РІСЃРµРј, С‡С‚Рѕ РІС‹ РЅРѕСЃРёС‚Рµ РїРѕР»РѕСЃРєРё, С‡С‚РѕР±С‹ РІС‹РїР»РµСЃРЅСѓС‚СЊ СЃРІРѕР№ РіРЅРµРІ, РїРѕРЅРёРјР°РµС‚Рµ?В» Р¤СѓР±СѓРєРё С‚РєРЅСѓР», Р·Р°СЃС‚Р°РІРёРІ Р±СЂСЋРЅРµС‚РєСѓ СЃРјСѓС‰С‘РЅРЅРѕ СЃРµСЃС‚СЊ Рё РЅРµРјРЅРѕРіРѕ РѕРїСѓСЃС‚РёС‚СЊ СЋР±РєСѓ.
 
-— П-пожалуйста, я знаю, что ты тоже солёный, — парировала она.
+вЂ” Рџ-РїРѕР¶Р°Р»СѓР№СЃС‚Р°, СЏ Р·РЅР°СЋ, С‡С‚Рѕ С‚С‹ С‚РѕР¶Рµ СЃРѕР»С‘РЅС‹Р№, вЂ” РїР°СЂРёСЂРѕРІР°Р»Р° РѕРЅР°.
 
-— Кхм, — Тамаки прочистил горло. «Если ты перестанешь проигрывать после первого раунда, я поверну колесо в наказание».
+вЂ” РљС…Рј, вЂ” РўР°РјР°РєРё РїСЂРѕС‡РёСЃС‚РёР» РіРѕСЂР»Рѕ. В«Р•СЃР»Рё С‚С‹ РїРµСЂРµСЃС‚Р°РЅРµС€СЊ РїСЂРѕРёРіСЂС‹РІР°С‚СЊ РїРѕСЃР»Рµ РїРµСЂРІРѕРіРѕ СЂР°СѓРЅРґР°, СЏ РїРѕРІРµСЂРЅСѓ РєРѕР»РµСЃРѕ РІ РЅР°РєР°Р·Р°РЅРёРµВ».
 
-— Хорошо, — сказали двое других в унисон. Тамаки крутил колесо, девочки нервно наблюдали, как оно вращалось как в тумане. В конце концов колесо остановилось, игла остановилась на первом из многих наказаний: слабительных. Пара вздохнула, поднеся к камерам по паре таблеток в каждой ладони, а затем опустила таблетки, чтобы показать зрителям, что они не симулируют свою задачу.
+вЂ” РҐРѕСЂРѕС€Рѕ, вЂ” СЃРєР°Р·Р°Р»Рё РґРІРѕРµ РґСЂСѓРіРёС… РІ СѓРЅРёСЃРѕРЅ. РўР°РјР°РєРё РєСЂСѓС‚РёР» РєРѕР»РµСЃРѕ, РґРµРІРѕС‡РєРё РЅРµСЂРІРЅРѕ РЅР°Р±Р»СЋРґР°Р»Рё, РєР°Рє РѕРЅРѕ РІСЂР°С‰Р°Р»РѕСЃСЊ РєР°Рє РІ С‚СѓРјР°РЅРµ. Р’ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ РєРѕР»РµСЃРѕ РѕСЃС‚Р°РЅРѕРІРёР»РѕСЃСЊ, РёРіР»Р° РѕСЃС‚Р°РЅРѕРІРёР»Р°СЃСЊ РЅР° РїРµСЂРІРѕРј РёР· РјРЅРѕРіРёС… РЅР°РєР°Р·Р°РЅРёР№: СЃР»Р°Р±РёС‚РµР»СЊРЅС‹С…. РџР°СЂР° РІР·РґРѕС…РЅСѓР»Р°, РїРѕРґРЅРµСЃСЏ Рє РєР°РјРµСЂР°Рј РїРѕ РїР°СЂРµ С‚Р°Р±Р»РµС‚РѕРє РІ РєР°Р¶РґРѕР№ Р»Р°РґРѕРЅРё, Р° Р·Р°С‚РµРј РѕРїСѓСЃС‚РёР»Р° С‚Р°Р±Р»РµС‚РєРё, С‡С‚РѕР±С‹ РїРѕРєР°Р·Р°С‚СЊ Р·СЂРёС‚РµР»СЏРј, С‡С‚Рѕ РѕРЅРё РЅРµ СЃРёРјСѓР»РёСЂСѓСЋС‚ СЃРІРѕСЋ Р·Р°РґР°С‡Сѓ.
 
-«Хе-хе, они быстродействуют. Думаю, мы посмотрим, насколько быстро это произойдёт, — поддразнил мальчик-собака.
+В«РҐРµ-С…Рµ, РѕРЅРё Р±С‹СЃС‚СЂРѕРґРµР№СЃС‚РІСѓСЋС‚. Р”СѓРјР°СЋ, РјС‹ РїРѕСЃРјРѕС‚СЂРёРј, РЅР°СЃРєРѕР»СЊРєРѕ Р±С‹СЃС‚СЂРѕ СЌС‚Рѕ РїСЂРѕРёР·РѕР№РґС‘С‚, вЂ” РїРѕРґРґСЂР°Р·РЅРёР» РјР°Р»СЊС‡РёРє-СЃРѕР±Р°РєР°.
 
-Несколько раундов прошли бесцеремонно, и каждое трио после поражения подверглось различным наказаниям, таким как приседания, чернослив, кофе и т. Д. Тем не менее, наказания определённо сработали: каждый участник начал бороться, почувствовав, как что-то стучится в его заднюю дверь. И со временем внутри Фубуки росла отдельная потребность, которую было невозможно игнорировать.
+РќРµСЃРєРѕР»СЊРєРѕ СЂР°СѓРЅРґРѕРІ РїСЂРѕС€Р»Рё Р±РµСЃС†РµСЂРµРјРѕРЅРЅРѕ, Рё РєР°Р¶РґРѕРµ С‚СЂРёРѕ РїРѕСЃР»Рµ РїРѕСЂР°Р¶РµРЅРёСЏ РїРѕРґРІРµСЂРіР»РѕСЃСЊ СЂР°Р·Р»РёС‡РЅС‹Рј РЅР°РєР°Р·Р°РЅРёСЏРј, С‚Р°РєРёРј РєР°Рє РїСЂРёСЃРµРґР°РЅРёСЏ, С‡РµСЂРЅРѕСЃР»РёРІ, РєРѕС„Рµ Рё С‚. Р”. РўРµРј РЅРµ РјРµРЅРµРµ, РЅР°РєР°Р·Р°РЅРёСЏ РѕРїСЂРµРґРµР»С‘РЅРЅРѕ СЃСЂР°Р±РѕС‚Р°Р»Рё: РєР°Р¶РґС‹Р№ СѓС‡Р°СЃС‚РЅРёРє РЅР°С‡Р°Р» Р±РѕСЂРѕС‚СЊСЃСЏ, РїРѕС‡СѓРІСЃС‚РІРѕРІР°РІ, РєР°Рє С‡С‚Рѕ-С‚Рѕ СЃС‚СѓС‡РёС‚СЃСЏ РІ РµРіРѕ Р·Р°РґРЅСЋСЋ РґРІРµСЂСЊ. Р СЃРѕ РІСЂРµРјРµРЅРµРј РІРЅСѓС‚СЂРё Р¤СѓР±СѓРєРё СЂРѕСЃР»Р° РѕС‚РґРµР»СЊРЅР°СЏ РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ, РєРѕС‚РѕСЂСѓСЋ Р±С‹Р»Рѕ РЅРµРІРѕР·РјРѕР¶РЅРѕ РёРіРЅРѕСЂРёСЂРѕРІР°С‚СЊ.
 
-«Надо идти», — повторяла Фубуки про себя, скрещивая ноги взад и вперёд, вне поля зрения камеры. Она проигрывала битву с мочевым пузырём, а благодаря слабительным и кофе её кишечник не сильно отставал в гонке. Растущее желание попис*ть также отвлекало её от игры, из-за чего она проигрывала ещё больше раундов. Пока она изо всех сил старалась заполнить пробел на доске для тетриса и удержаться от заполнения шорт, седовласая лиса знала, что нужно что-то сделать. Глубоко вздохнув, она слегка раздвинула ноги и отпустила. Каскад мочи тут же залил её белые трусики и чёрные шорты, скатившись с игрового кресла в лужу у её босых ног. Было неловко мириться с тем, что она нарочно попис*ла, но сфинктер не дал ей много времени на размышления, поскольку что-то начало торчать из её ануса. Сжав попу, девушка-лиса снова сосредоточилась на игре, но обнаружила, что уже проиграла, пока занималась делами.
+В«РќР°РґРѕ РёРґС‚РёВ», вЂ” РїРѕРІС‚РѕСЂСЏР»Р° Р¤СѓР±СѓРєРё РїСЂРѕ СЃРµР±СЏ, СЃРєСЂРµС‰РёРІР°СЏ РЅРѕРіРё РІР·Р°Рґ Рё РІРїРµСЂС‘Рґ, РІРЅРµ РїРѕР»СЏ Р·СЂРµРЅРёСЏ РєР°РјРµСЂС‹. РћРЅР° РїСЂРѕРёРіСЂС‹РІР°Р»Р° Р±РёС‚РІСѓ СЃ РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј, Р° Р±Р»Р°РіРѕРґР°СЂСЏ СЃР»Р°Р±РёС‚РµР»СЊРЅС‹Рј Рё РєРѕС„Рµ РµС‘ РєРёС€РµС‡РЅРёРє РЅРµ СЃРёР»СЊРЅРѕ РѕС‚СЃС‚Р°РІР°Р» РІ РіРѕРЅРєРµ. Р Р°СЃС‚СѓС‰РµРµ Р¶РµР»Р°РЅРёРµ РїРѕРїРёСЃ*С‚СЊ С‚Р°РєР¶Рµ РѕС‚РІР»РµРєР°Р»Рѕ РµС‘ РѕС‚ РёРіСЂС‹, РёР·-Р·Р° С‡РµРіРѕ РѕРЅР° РїСЂРѕРёРіСЂС‹РІР°Р»Р° РµС‰С‘ Р±РѕР»СЊС€Рµ СЂР°СѓРЅРґРѕРІ. РџРѕРєР° РѕРЅР° РёР·Рѕ РІСЃРµС… СЃРёР» СЃС‚Р°СЂР°Р»Р°СЃСЊ Р·Р°РїРѕР»РЅРёС‚СЊ РїСЂРѕР±РµР» РЅР° РґРѕСЃРєРµ РґР»СЏ С‚РµС‚СЂРёСЃР° Рё СѓРґРµСЂР¶Р°С‚СЊСЃСЏ РѕС‚ Р·Р°РїРѕР»РЅРµРЅРёСЏ С€РѕСЂС‚, СЃРµРґРѕРІР»Р°СЃР°СЏ Р»РёСЃР° Р·РЅР°Р»Р°, С‡С‚Рѕ РЅСѓР¶РЅРѕ С‡С‚Рѕ-С‚Рѕ СЃРґРµР»Р°С‚СЊ. Р“Р»СѓР±РѕРєРѕ РІР·РґРѕС…РЅСѓРІ, РѕРЅР° СЃР»РµРіРєР° СЂР°Р·РґРІРёРЅСѓР»Р° РЅРѕРіРё Рё РѕС‚РїСѓСЃС‚РёР»Р°. РљР°СЃРєР°Рґ РјРѕС‡Рё С‚СѓС‚ Р¶Рµ Р·Р°Р»РёР» РµС‘ Р±РµР»С‹Рµ С‚СЂСѓСЃРёРєРё Рё С‡С‘СЂРЅС‹Рµ С€РѕСЂС‚С‹, СЃРєР°С‚РёРІС€РёСЃСЊ СЃ РёРіСЂРѕРІРѕРіРѕ РєСЂРµСЃР»Р° РІ Р»СѓР¶Сѓ Сѓ РµС‘ Р±РѕСЃС‹С… РЅРѕРі. Р‘С‹Р»Рѕ РЅРµР»РѕРІРєРѕ РјРёСЂРёС‚СЊСЃСЏ СЃ С‚РµРј, С‡С‚Рѕ РѕРЅР° РЅР°СЂРѕС‡РЅРѕ РїРѕРїРёСЃ*Р»Р°, РЅРѕ СЃС„РёРЅРєС‚РµСЂ РЅРµ РґР°Р» РµР№ РјРЅРѕРіРѕ РІСЂРµРјРµРЅРё РЅР° СЂР°Р·РјС‹С€Р»РµРЅРёСЏ, РїРѕСЃРєРѕР»СЊРєСѓ С‡С‚Рѕ-С‚Рѕ РЅР°С‡Р°Р»Рѕ С‚РѕСЂС‡Р°С‚СЊ РёР· РµС‘ Р°РЅСѓСЃР°. РЎР¶Р°РІ РїРѕРїСѓ, РґРµРІСѓС€РєР°-Р»РёСЃР° СЃРЅРѕРІР° СЃРѕСЃСЂРµРґРѕС‚РѕС‡РёР»Р°СЃСЊ РЅР° РёРіСЂРµ, РЅРѕ РѕР±РЅР°СЂСѓР¶РёР»Р°, С‡С‚Рѕ СѓР¶Рµ РїСЂРѕРёРіСЂР°Р»Р°, РїРѕРєР° Р·Р°РЅРёРјР°Р»Р°СЃСЊ РґРµР»Р°РјРё.
 
-«Х-ха! Я выиграю этот! Мацури хвастался небольшими жалобами.
+В«РҐ-С…Р°! РЇ РІС‹РёРіСЂР°СЋ СЌС‚РѕС‚! РњР°С†СѓСЂРё С…РІР°СЃС‚Р°Р»СЃСЏ РЅРµР±РѕР»СЊС€РёРјРё Р¶Р°Р»РѕР±Р°РјРё.
 
-— Кажется, так… — Тамаки тоже достигал предела своих возможностей, покачивая попой вперёд и назад. Он снова крутанул колесо, но на этот раз наказание заставило обоих проигравших побледнеть.
+вЂ” РљР°Р¶РµС‚СЃСЏ, С‚Р°РєвЂ¦ вЂ” РўР°РјР°РєРё С‚РѕР¶Рµ РґРѕСЃС‚РёРіР°Р» РїСЂРµРґРµР»Р° СЃРІРѕРёС… РІРѕР·РјРѕР¶РЅРѕСЃС‚РµР№, РїРѕРєР°С‡РёРІР°СЏ РїРѕРїРѕР№ РІРїРµСЂС‘Рґ Рё РЅР°Р·Р°Рґ. РћРЅ СЃРЅРѕРІР° РєСЂСѓС‚Р°РЅСѓР» РєРѕР»РµСЃРѕ, РЅРѕ РЅР° СЌС‚РѕС‚ СЂР°Р· РЅР°РєР°Р·Р°РЅРёРµ Р·Р°СЃС‚Р°РІРёР»Рѕ РѕР±РѕРёС… РїСЂРѕРёРіСЂР°РІС€РёС… РїРѕР±Р»РµРґРЅРµС‚СЊ.
 
-«Нажми 15 секунд»
+В«РќР°Р¶РјРё 15 СЃРµРєСѓРЅРґВ»
 
-— Н-ни в коем случае, — заикаясь, пробормотала Фубуки, пот стекал по её телу в уже мокрые шорты. Время остановилось. Она была в растерянности. При таких темпах она второй раз за свою карьеру облажается и закрепится за собой как дитя компании. Она просканировала свой мозг в поисках вариантов, способов избежать запятнания своей репутации и сохранить своё эго. И всё же, несмотря на все свои усилия, Фубуки знала, что не избежать испражнения в штаны невозможно. Даже если бы она притворилась, что напрягает кишечник, пройдёт всего несколько минут, прежде чем её тело всё равно выйдет из строя. Затем это ударило её. «Притворяться? О, вот оно!»
+вЂ” Рќ-РЅРё РІ РєРѕРµРј СЃР»СѓС‡Р°Рµ, вЂ” Р·Р°РёРєР°СЏСЃСЊ, РїСЂРѕР±РѕСЂРјРѕС‚Р°Р»Р° Р¤СѓР±СѓРєРё, РїРѕС‚ СЃС‚РµРєР°Р» РїРѕ РµС‘ С‚РµР»Сѓ РІ СѓР¶Рµ РјРѕРєСЂС‹Рµ С€РѕСЂС‚С‹. Р’СЂРµРјСЏ РѕСЃС‚Р°РЅРѕРІРёР»РѕСЃСЊ. РћРЅР° Р±С‹Р»Р° РІ СЂР°СЃС‚РµСЂСЏРЅРЅРѕСЃС‚Рё. РџСЂРё С‚Р°РєРёС… С‚РµРјРїР°С… РѕРЅР° РІС‚РѕСЂРѕР№ СЂР°Р· Р·Р° СЃРІРѕСЋ РєР°СЂСЊРµСЂСѓ РѕР±Р»Р°Р¶Р°РµС‚СЃСЏ Рё Р·Р°РєСЂРµРїРёС‚СЃСЏ Р·Р° СЃРѕР±РѕР№ РєР°Рє РґРёС‚СЏ РєРѕРјРїР°РЅРёРё. РћРЅР° РїСЂРѕСЃРєР°РЅРёСЂРѕРІР°Р»Р° СЃРІРѕР№ РјРѕР·Рі РІ РїРѕРёСЃРєР°С… РІР°СЂРёР°РЅС‚РѕРІ, СЃРїРѕСЃРѕР±РѕРІ РёР·Р±РµР¶Р°С‚СЊ Р·Р°РїСЏС‚РЅР°РЅРёСЏ СЃРІРѕРµР№ СЂРµРїСѓС‚Р°С†РёРё Рё СЃРѕС…СЂР°РЅРёС‚СЊ СЃРІРѕС‘ СЌРіРѕ. Р РІСЃС‘ Р¶Рµ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° РІСЃРµ СЃРІРѕРё СѓСЃРёР»РёСЏ, Р¤СѓР±СѓРєРё Р·РЅР°Р»Р°, С‡С‚Рѕ РЅРµ РёР·Р±РµР¶Р°С‚СЊ РёСЃРїСЂР°Р¶РЅРµРЅРёСЏ РІ С€С‚Р°РЅС‹ РЅРµРІРѕР·РјРѕР¶РЅРѕ. Р”Р°Р¶Рµ РµСЃР»Рё Р±С‹ РѕРЅР° РїСЂРёС‚РІРѕСЂРёР»Р°СЃСЊ, С‡С‚Рѕ РЅР°РїСЂСЏРіР°РµС‚ РєРёС€РµС‡РЅРёРє, РїСЂРѕР№РґС‘С‚ РІСЃРµРіРѕ РЅРµСЃРєРѕР»СЊРєРѕ РјРёРЅСѓС‚, РїСЂРµР¶РґРµ С‡РµРј РµС‘ С‚РµР»Рѕ РІСЃС‘ СЂР°РІРЅРѕ РІС‹Р№РґРµС‚ РёР· СЃС‚СЂРѕСЏ. Р—Р°С‚РµРј СЌС‚Рѕ СѓРґР°СЂРёР»Рѕ РµС‘. В«РџСЂРёС‚РІРѕСЂСЏС‚СЊСЃСЏ? Рћ, РІРѕС‚ РѕРЅРѕ!В»
 
-— Хорошо… ты готов, Фубуки…? — спросил Тамаки, готовясь к худшему и отвлекая девушку от мыслей.
+вЂ” РҐРѕСЂРѕС€РѕвЂ¦ С‚С‹ РіРѕС‚РѕРІ, Р¤СѓР±СѓРєРёвЂ¦? вЂ” СЃРїСЂРѕСЃРёР» РўР°РјР°РєРё, РіРѕС‚РѕРІСЏСЃСЊ Рє С…СѓРґС€РµРјСѓ Рё РѕС‚РІР»РµРєР°СЏ РґРµРІСѓС€РєСѓ РѕС‚ РјС‹СЃР»РµР№.
 
-— Д-да, — ответила Фубуки, готовая привести свой план в действие.
+вЂ” Р”-РґР°, вЂ” РѕС‚РІРµС‚РёР»Р° Р¤СѓР±СѓРєРё, РіРѕС‚РѕРІР°СЏ РїСЂРёРІРµСЃС‚Рё СЃРІРѕР№ РїР»Р°РЅ РІ РґРµР№СЃС‚РІРёРµ.
 
-«Ооокей, теперь толкай!» — скомандовала Мацури, запуская таймер на своём телефоне.
+В«РћРѕРѕРєРµР№, С‚РµРїРµСЂСЊ С‚РѕР»РєР°Р№!В» вЂ” СЃРєРѕРјР°РЅРґРѕРІР°Р»Р° РњР°С†СѓСЂРё, Р·Р°РїСѓСЃРєР°СЏ С‚Р°Р№РјРµСЂ РЅР° СЃРІРѕС‘Рј С‚РµР»РµС„РѕРЅРµ.
 
-— Ух… — простонали Тамаки и Фубуки, толчка их тел было более чем достаточно, чтобы их анусы открылись, и оба участника полностью опорожнялись в нижнее бельё. Тамаки встал, его трусики в горошек полностью вывернулись наружу, когда пространство между ними занял большой клубок фекалий. Фубуки повезло меньше. Как только она начала тужиться, из неё вышел маленький самородок, а затем волна каши вылилась из неё, быстро заняв всё место в её трусиках и облепив её попу в беспорядок. Однако по сравнению с Тамаки, которая почти плакала, она сохраняла невозмутимое выражение лица, создавая иллюзию, что всё ещё держится, несмотря на то, что выталкивала всё наружу, пока не опустела. Когда всё было сказано и сделано, испачкавшись почти в два раза больше, чем в прошлый раз, девушка-лиса ухмыльнулась в камеру. И чат, и Мацури аплодировали ей за то, что она смогла сдержаться; она какала сама и сохраняла своё достоинство.
+вЂ” РЈС…вЂ¦ вЂ” РїСЂРѕСЃС‚РѕРЅР°Р»Рё РўР°РјР°РєРё Рё Р¤СѓР±СѓРєРё, С‚РѕР»С‡РєР° РёС… С‚РµР» Р±С‹Р»Рѕ Р±РѕР»РµРµ С‡РµРј РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ, С‡С‚РѕР±С‹ РёС… Р°РЅСѓСЃС‹ РѕС‚РєСЂС‹Р»РёСЃСЊ, Рё РѕР±Р° СѓС‡Р°СЃС‚РЅРёРєР° РїРѕР»РЅРѕСЃС‚СЊСЋ РѕРїРѕСЂРѕР¶РЅСЏР»РёСЃСЊ РІ РЅРёР¶РЅРµРµ Р±РµР»СЊС‘. РўР°РјР°РєРё РІСЃС‚Р°Р», РµРіРѕ С‚СЂСѓСЃРёРєРё РІ РіРѕСЂРѕС€РµРє РїРѕР»РЅРѕСЃС‚СЊСЋ РІС‹РІРµСЂРЅСѓР»РёСЃСЊ РЅР°СЂСѓР¶Сѓ, РєРѕРіРґР° РїСЂРѕСЃС‚СЂР°РЅСЃС‚РІРѕ РјРµР¶РґСѓ РЅРёРјРё Р·Р°РЅСЏР» Р±РѕР»СЊС€РѕР№ РєР»СѓР±РѕРє С„РµРєР°Р»РёР№. Р¤СѓР±СѓРєРё РїРѕРІРµР·Р»Рѕ РјРµРЅСЊС€Рµ. РљР°Рє С‚РѕР»СЊРєРѕ РѕРЅР° РЅР°С‡Р°Р»Р° С‚СѓР¶РёС‚СЊСЃСЏ, РёР· РЅРµС‘ РІС‹С€РµР» РјР°Р»РµРЅСЊРєРёР№ СЃР°РјРѕСЂРѕРґРѕРє, Р° Р·Р°С‚РµРј РІРѕР»РЅР° РєР°С€Рё РІС‹Р»РёР»Р°СЃСЊ РёР· РЅРµС‘, Р±С‹СЃС‚СЂРѕ Р·Р°РЅСЏРІ РІСЃС‘ РјРµСЃС‚Рѕ РІ РµС‘ С‚СЂСѓСЃРёРєР°С… Рё РѕР±Р»РµРїРёРІ РµС‘ РїРѕРїСѓ РІ Р±РµСЃРїРѕСЂСЏРґРѕРє. РћРґРЅР°РєРѕ РїРѕ СЃСЂР°РІРЅРµРЅРёСЋ СЃ РўР°РјР°РєРё, РєРѕС‚РѕСЂР°СЏ РїРѕС‡С‚Рё РїР»Р°РєР°Р»Р°, РѕРЅР° СЃРѕС…СЂР°РЅСЏР»Р° РЅРµРІРѕР·РјСѓС‚РёРјРѕРµ РІС‹СЂР°Р¶РµРЅРёРµ Р»РёС†Р°, СЃРѕР·РґР°РІР°СЏ РёР»Р»СЋР·РёСЋ, С‡С‚Рѕ РІСЃС‘ РµС‰С‘ РґРµСЂР¶РёС‚СЃСЏ, РЅРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РІС‹С‚Р°Р»РєРёРІР°Р»Р° РІСЃС‘ РЅР°СЂСѓР¶Сѓ, РїРѕРєР° РЅРµ РѕРїСѓСЃС‚РµР»Р°. РљРѕРіРґР° РІСЃС‘ Р±С‹Р»Рѕ СЃРєР°Р·Р°РЅРѕ Рё СЃРґРµР»Р°РЅРѕ, РёСЃРїР°С‡РєР°РІС€РёСЃСЊ РїРѕС‡С‚Рё РІ РґРІР° СЂР°Р·Р° Р±РѕР»СЊС€Рµ, С‡РµРј РІ РїСЂРѕС€Р»С‹Р№ СЂР°Р·, РґРµРІСѓС€РєР°-Р»РёСЃР° СѓС…РјС‹Р»СЊРЅСѓР»Р°СЃСЊ РІ РєР°РјРµСЂСѓ. Р С‡Р°С‚, Рё РњР°С†СѓСЂРё Р°РїР»РѕРґРёСЂРѕРІР°Р»Рё РµР№ Р·Р° С‚Рѕ, С‡С‚Рѕ РѕРЅР° СЃРјРѕРіР»Р° СЃРґРµСЂР¶Р°С‚СЊСЃСЏ; РѕРЅР° РєР°РєР°Р»Р° СЃР°РјР° Рё СЃРѕС…СЂР°РЅСЏР»Р° СЃРІРѕС‘ РґРѕСЃС‚РѕРёРЅСЃС‚РІРѕ.
 
-«Иееееет, мои трусики полностью испорчены», — размышлял Тамаки, теперь больше очарованный беспорядком в своём девичьем нижнем белье, чем расстроенный. Он повернул попу к камере, чтобы зрители могли лучше видеть, и в ответ заработал рвотные смайлы. «Ну, — сказал он, плюхнувшись обратно на стул, прежде чем продолжить: — Я выхожу на счёт. Это зависит от вас двоих. Пусть победит лучшая девочка!» Тамаки изменил свою роль в игре на зрителя перед началом следующей игры: одна девушка полна решимости победить, а другая знала, что она уже выиграла.
+В«РРµРµРµРµРµС‚, РјРѕРё С‚СЂСѓСЃРёРєРё РїРѕР»РЅРѕСЃС‚СЊСЋ РёСЃРїРѕСЂС‡РµРЅС‹В», вЂ” СЂР°Р·РјС‹С€Р»СЏР» РўР°РјР°РєРё, С‚РµРїРµСЂСЊ Р±РѕР»СЊС€Рµ РѕС‡Р°СЂРѕРІР°РЅРЅС‹Р№ Р±РµСЃРїРѕСЂСЏРґРєРѕРј РІ СЃРІРѕС‘Рј РґРµРІРёС‡СЊРµРј РЅРёР¶РЅРµРј Р±РµР»СЊРµ, С‡РµРј СЂР°СЃСЃС‚СЂРѕРµРЅРЅС‹Р№. РћРЅ РїРѕРІРµСЂРЅСѓР» РїРѕРїСѓ Рє РєР°РјРµСЂРµ, С‡С‚РѕР±С‹ Р·СЂРёС‚РµР»Рё РјРѕРіР»Рё Р»СѓС‡С€Рµ РІРёРґРµС‚СЊ, Рё РІ РѕС‚РІРµС‚ Р·Р°СЂР°Р±РѕС‚Р°Р» СЂРІРѕС‚РЅС‹Рµ СЃРјР°Р№Р»С‹. В«РќСѓ, вЂ” СЃРєР°Р·Р°Р» РѕРЅ, РїР»СЋС…РЅСѓРІС€РёСЃСЊ РѕР±СЂР°С‚РЅРѕ РЅР° СЃС‚СѓР», РїСЂРµР¶РґРµ С‡РµРј РїСЂРѕРґРѕР»Р¶РёС‚СЊ: вЂ” РЇ РІС‹С…РѕР¶Сѓ РЅР° СЃС‡С‘С‚. Р­С‚Рѕ Р·Р°РІРёСЃРёС‚ РѕС‚ РІР°СЃ РґРІРѕРёС…. РџСѓСЃС‚СЊ РїРѕР±РµРґРёС‚ Р»СѓС‡С€Р°СЏ РґРµРІРѕС‡РєР°!В» РўР°РјР°РєРё РёР·РјРµРЅРёР» СЃРІРѕСЋ СЂРѕР»СЊ РІ РёРіСЂРµ РЅР° Р·СЂРёС‚РµР»СЏ РїРµСЂРµРґ РЅР°С‡Р°Р»РѕРј СЃР»РµРґСѓСЋС‰РµР№ РёРіСЂС‹: РѕРґРЅР° РґРµРІСѓС€РєР° РїРѕР»РЅР° СЂРµС€РёРјРѕСЃС‚Рё РїРѕР±РµРґРёС‚СЊ, Р° РґСЂСѓРіР°СЏ Р·РЅР°Р»Р°, С‡С‚Рѕ РѕРЅР° СѓР¶Рµ РІС‹РёРіСЂР°Р»Р°.
 
-Прошло ещё несколько матчей, поскольку Мацури теперь защищался, проиграв почти все из них. Несмотря на то, что теперь ей стало некомфортно и немного чесалось от шарканья и тушения в собственном беспорядке, отсутствие отвлекающих факторов позволило Фубуки легко победить танцующую на горшке девочку в игре. После того, как её снова выпили кофе и приседали, чирлидерша была в тупике.
+РџСЂРѕС€Р»Рѕ РµС‰С‘ РЅРµСЃРєРѕР»СЊРєРѕ РјР°С‚С‡РµР№, РїРѕСЃРєРѕР»СЊРєСѓ РњР°С†СѓСЂРё С‚РµРїРµСЂСЊ Р·Р°С‰РёС‰Р°Р»СЃСЏ, РїСЂРѕРёРіСЂР°РІ РїРѕС‡С‚Рё РІСЃРµ РёР· РЅРёС…. РќРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ С‚РµРїРµСЂСЊ РµР№ СЃС‚Р°Р»Рѕ РЅРµРєРѕРјС„РѕСЂС‚РЅРѕ Рё РЅРµРјРЅРѕРіРѕ С‡РµСЃР°Р»РѕСЃСЊ РѕС‚ С€Р°СЂРєР°РЅСЊСЏ Рё С‚СѓС€РµРЅРёСЏ РІ СЃРѕР±СЃС‚РІРµРЅРЅРѕРј Р±РµСЃРїРѕСЂСЏРґРєРµ, РѕС‚СЃСѓС‚СЃС‚РІРёРµ РѕС‚РІР»РµРєР°СЋС‰РёС… С„Р°РєС‚РѕСЂРѕРІ РїРѕР·РІРѕР»РёР»Рѕ Р¤СѓР±СѓРєРё Р»РµРіРєРѕ РїРѕР±РµРґРёС‚СЊ С‚Р°РЅС†СѓСЋС‰СѓСЋ РЅР° РіРѕСЂС€РєРµ РґРµРІРѕС‡РєСѓ РІ РёРіСЂРµ. РџРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РµС‘ СЃРЅРѕРІР° РІС‹РїРёР»Рё РєРѕС„Рµ Рё РїСЂРёСЃРµРґР°Р»Рё, С‡РёСЂР»РёРґРµСЂС€Р° Р±С‹Р»Р° РІ С‚СѓРїРёРєРµ.
 
-— Н-как она вдруг стала такой чертовски хорошей?! Мацури была в ярости, когда снова проиграла.
+вЂ” Рќ-РєР°Рє РѕРЅР° РІРґСЂСѓРі СЃС‚Р°Р»Р° С‚Р°РєРѕР№ С‡РµСЂС‚РѕРІСЃРєРё С…РѕСЂРѕС€РµР№?! РњР°С†СѓСЂРё Р±С‹Р»Р° РІ СЏСЂРѕСЃС‚Рё, РєРѕРіРґР° СЃРЅРѕРІР° РїСЂРѕРёРіСЂР°Р»Р°.
 
-«Ух ты, это, должно быть, действительно не твой день!» — прокомментировал Тамаки, теперь снова бодрый, несмотря на то, что его собственный беспорядок отягощал его трусики. «Хотя я надеюсь, что это скоро закончится. В противном случае у меня может появиться сыпь», — пошутил он, снова крутя колесо.
+В«РЈС… С‚С‹, СЌС‚Рѕ, РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ, РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅРµ С‚РІРѕР№ РґРµРЅСЊ!В» вЂ” РїСЂРѕРєРѕРјРјРµРЅС‚РёСЂРѕРІР°Р» РўР°РјР°РєРё, С‚РµРїРµСЂСЊ СЃРЅРѕРІР° Р±РѕРґСЂС‹Р№, РЅРµСЃРјРѕС‚СЂСЏ РЅР° С‚Рѕ, С‡С‚Рѕ РµРіРѕ СЃРѕР±СЃС‚РІРµРЅРЅС‹Р№ Р±РµСЃРїРѕСЂСЏРґРѕРє РѕС‚СЏРіРѕС‰Р°Р» РµРіРѕ С‚СЂСѓСЃРёРєРё. В«РҐРѕС‚СЏ СЏ РЅР°РґРµСЋСЃСЊ, С‡С‚Рѕ СЌС‚Рѕ СЃРєРѕСЂРѕ Р·Р°РєРѕРЅС‡РёС‚СЃСЏ. Р’ РїСЂРѕС‚РёРІРЅРѕРј СЃР»СѓС‡Р°Рµ Сѓ РјРµРЅСЏ РјРѕР¶РµС‚ РїРѕСЏРІРёС‚СЊСЃСЏ СЃС‹РїСЊВ», вЂ” РїРѕС€СѓС‚РёР» РѕРЅ, СЃРЅРѕРІР° РєСЂСѓС‚СЏ РєРѕР»РµСЃРѕ.
 
-«10 приседаний»
+В«10 РїСЂРёСЃРµРґР°РЅРёР№В»
 
-— Чёрт, — выругалась Мацури, потирая ноги вместе и максимально сжимая попу. Она прекрасно знала, что даже одно-единственное приседание ослабит её мышцы настолько, что её нижнее бельё станет катастрофой.
+вЂ” Р§С‘СЂС‚, вЂ” РІС‹СЂСѓРіР°Р»Р°СЃСЊ РњР°С†СѓСЂРё, РїРѕС‚РёСЂР°СЏ РЅРѕРіРё РІРјРµСЃС‚Рµ Рё РјР°РєСЃРёРјР°Р»СЊРЅРѕ СЃР¶РёРјР°СЏ РїРѕРїСѓ. РћРЅР° РїСЂРµРєСЂР°СЃРЅРѕ Р·РЅР°Р»Р°, С‡С‚Рѕ РґР°Р¶Рµ РѕРґРЅРѕ-РµРґРёРЅСЃС‚РІРµРЅРЅРѕРµ РїСЂРёСЃРµРґР°РЅРёРµ РѕСЃР»Р°Р±РёС‚ РµС‘ РјС‹С€С†С‹ РЅР°СЃС‚РѕР»СЊРєРѕ, С‡С‚Рѕ РµС‘ РЅРёР¶РЅРµРµ Р±РµР»СЊС‘ СЃС‚Р°РЅРµС‚ РєР°С‚Р°СЃС‚СЂРѕС„РѕР№.
 
-«В чём дело?» — насмехался Фубуки. — Надо на горшок? — саркастически спросила она, прежде чем насмешливо пососать большой палец.
+В«Р’ С‡С‘Рј РґРµР»Рѕ?В» вЂ” РЅР°СЃРјРµС…Р°Р»СЃСЏ Р¤СѓР±СѓРєРё. вЂ” РќР°РґРѕ РЅР° РіРѕСЂС€РѕРє? вЂ” СЃР°СЂРєР°СЃС‚РёС‡РµСЃРєРё СЃРїСЂРѕСЃРёР»Р° РѕРЅР°, РїСЂРµР¶РґРµ С‡РµРј РЅР°СЃРјРµС€Р»РёРІРѕ РїРѕСЃРѕСЃР°С‚СЊ Р±РѕР»СЊС€РѕР№ РїР°Р»РµС†.
 
-— Т-заткнись, чёрт возьми! Мацури вспыхнул. — Я-я-я покажу т-т-тебе! С этими словами она встала и расположилась спиной к веб-камере. Пытаясь доказать свою точку зрения, девушка сдёрнула юбку до ног, предоставив миру полный обзор её одетой в колготки попки. Челюсти остальных ютуберов упали на пол, когда Мацури чудесным образом начал приседать.
+вЂ” Рў-Р·Р°С‚РєРЅРёСЃСЊ, С‡С‘СЂС‚ РІРѕР·СЊРјРё! РњР°С†СѓСЂРё РІСЃРїС‹С…РЅСѓР». вЂ” РЇ-СЏ-СЏ РїРѕРєР°Р¶Сѓ С‚-С‚-С‚РµР±Рµ! РЎ СЌС‚РёРјРё СЃР»РѕРІР°РјРё РѕРЅР° РІСЃС‚Р°Р»Р° Рё СЂР°СЃРїРѕР»РѕР¶РёР»Р°СЃСЊ СЃРїРёРЅРѕР№ Рє РІРµР±-РєР°РјРµСЂРµ. РџС‹С‚Р°СЏСЃСЊ РґРѕРєР°Р·Р°С‚СЊ СЃРІРѕСЋ С‚РѕС‡РєСѓ Р·СЂРµРЅРёСЏ, РґРµРІСѓС€РєР° СЃРґС‘СЂРЅСѓР»Р° СЋР±РєСѓ РґРѕ РЅРѕРі, РїСЂРµРґРѕСЃС‚Р°РІРёРІ РјРёСЂСѓ РїРѕР»РЅС‹Р№ РѕР±Р·РѕСЂ РµС‘ РѕРґРµС‚РѕР№ РІ РєРѕР»РіРѕС‚РєРё РїРѕРїРєРё. Р§РµР»СЋСЃС‚Рё РѕСЃС‚Р°Р»СЊРЅС‹С… СЋС‚СѓР±РµСЂРѕРІ СѓРїР°Р»Рё РЅР° РїРѕР», РєРѕРіРґР° РњР°С†СѓСЂРё С‡СѓРґРµСЃРЅС‹Рј РѕР±СЂР°Р·РѕРј РЅР°С‡Р°Р» РїСЂРёСЃРµРґР°С‚СЊ.
 
-Однако после девятого приседа её темп резко замедлился. Мацури чувствовала, как её сфинктер кричит, моля Бога или себя о пощаде. «Хорошо, последний. Красиво и медленно», — подумала она вслух, но её последний спуск оказался фатальным. Когда она достигла нижней точки приседа, её теперь уже раздвинутый анус уже устал. Неудержимая волна коричневой лавы вырвалась из её спины, мгновенно разрушив её трусики в жёлтую полоску. Её нижнее бельё не могло сдержать волну за волной полутвердых какашек, которые хлынули наружу и просачивались из отверстий для ног в её колготки. Он начал сочиться по её ногам, застряв между плотной сеткой и мягкой кожей.
+РћРґРЅР°РєРѕ РїРѕСЃР»Рµ РґРµРІСЏС‚РѕРіРѕ РїСЂРёСЃРµРґР° РµС‘ С‚РµРјРї СЂРµР·РєРѕ Р·Р°РјРµРґР»РёР»СЃСЏ. РњР°С†СѓСЂРё С‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє РµС‘ СЃС„РёРЅРєС‚РµСЂ РєСЂРёС‡РёС‚, РјРѕР»СЏ Р‘РѕРіР° РёР»Рё СЃРµР±СЏ Рѕ РїРѕС‰Р°РґРµ. В«РҐРѕСЂРѕС€Рѕ, РїРѕСЃР»РµРґРЅРёР№. РљСЂР°СЃРёРІРѕ Рё РјРµРґР»РµРЅРЅРѕВ», вЂ” РїРѕРґСѓРјР°Р»Р° РѕРЅР° РІСЃР»СѓС…, РЅРѕ РµС‘ РїРѕСЃР»РµРґРЅРёР№ СЃРїСѓСЃРє РѕРєР°Р·Р°Р»СЃСЏ С„Р°С‚Р°Р»СЊРЅС‹Рј. РљРѕРіРґР° РѕРЅР° РґРѕСЃС‚РёРіР»Р° РЅРёР¶РЅРµР№ С‚РѕС‡РєРё РїСЂРёСЃРµРґР°, РµС‘ С‚РµРїРµСЂСЊ СѓР¶Рµ СЂР°Р·РґРІРёРЅСѓС‚С‹Р№ Р°РЅСѓСЃ СѓР¶Рµ СѓСЃС‚Р°Р». РќРµСѓРґРµСЂР¶РёРјР°СЏ РІРѕР»РЅР° РєРѕСЂРёС‡РЅРµРІРѕР№ Р»Р°РІС‹ РІС‹СЂРІР°Р»Р°СЃСЊ РёР· РµС‘ СЃРїРёРЅС‹, РјРіРЅРѕРІРµРЅРЅРѕ СЂР°Р·СЂСѓС€РёРІ РµС‘ С‚СЂСѓСЃРёРєРё РІ Р¶С‘Р»С‚СѓСЋ РїРѕР»РѕСЃРєСѓ. Р•С‘ РЅРёР¶РЅРµРµ Р±РµР»СЊС‘ РЅРµ РјРѕРіР»Рѕ СЃРґРµСЂР¶Р°С‚СЊ РІРѕР»РЅСѓ Р·Р° РІРѕР»РЅРѕР№ РїРѕР»СѓС‚РІРµСЂРґС‹С… РєР°РєР°С€РµРє, РєРѕС‚РѕСЂС‹Рµ С…Р»С‹РЅСѓР»Рё РЅР°СЂСѓР¶Сѓ Рё РїСЂРѕСЃР°С‡РёРІР°Р»РёСЃСЊ РёР· РѕС‚РІРµСЂСЃС‚РёР№ РґР»СЏ РЅРѕРі РІ РµС‘ РєРѕР»РіРѕС‚РєРё. РћРЅ РЅР°С‡Р°Р» СЃРѕС‡РёС‚СЊСЃСЏ РїРѕ РµС‘ РЅРѕРіР°Рј, Р·Р°СЃС‚СЂСЏРІ РјРµР¶РґСѓ РїР»РѕС‚РЅРѕР№ СЃРµС‚РєРѕР№ Рё РјСЏРіРєРѕР№ РєРѕР¶РµР№.
 
-«О боже мой, это лавина!» Тамаки пошутил, чтобы извлечь выгоду из разворачивающейся сцены.
+В«Рћ Р±РѕР¶Рµ РјРѕР№, СЌС‚Рѕ Р»Р°РІРёРЅР°!В» РўР°РјР°РєРё РїРѕС€СѓС‚РёР», С‡С‚РѕР±С‹ РёР·РІР»РµС‡СЊ РІС‹РіРѕРґСѓ РёР· СЂР°Р·РІРѕСЂР°С‡РёРІР°СЋС‰РµР№СЃСЏ СЃС†РµРЅС‹.
 
-— Уххх… охххх… — простонала Мацури, превратившись в стоны и крики от освобождения, охватившего её. После того, что казалось вечностью, вулкан позади неё начал успокаиваться, и на короткое время воцарилась тишина. У Мацури ослабели колени, ноги подкосились, и она упала на спину, когда в её микрофоне раздался громкий звук шлепка. Придя в себя, девочке не осталось ничего, кроме сожаления, поскольку она начала безудержно рыдать на полу, как ребёнок.
+вЂ” РЈС…С…С…вЂ¦ РѕС…С…С…С…вЂ¦ вЂ” РїСЂРѕСЃС‚РѕРЅР°Р»Р° РњР°С†СѓСЂРё, РїСЂРµРІСЂР°С‚РёРІС€РёСЃСЊ РІ СЃС‚РѕРЅС‹ Рё РєСЂРёРєРё РѕС‚ РѕСЃРІРѕР±РѕР¶РґРµРЅРёСЏ, РѕС…РІР°С‚РёРІС€РµРіРѕ РµС‘. РџРѕСЃР»Рµ С‚РѕРіРѕ, С‡С‚Рѕ РєР°Р·Р°Р»РѕСЃСЊ РІРµС‡РЅРѕСЃС‚СЊСЋ, РІСѓР»РєР°РЅ РїРѕР·Р°РґРё РЅРµС‘ РЅР°С‡Р°Р» СѓСЃРїРѕРєР°РёРІР°С‚СЊСЃСЏ, Рё РЅР° РєРѕСЂРѕС‚РєРѕРµ РІСЂРµРјСЏ РІРѕС†Р°СЂРёР»Р°СЃСЊ С‚РёС€РёРЅР°. РЈ РњР°С†СѓСЂРё РѕСЃР»Р°Р±РµР»Рё РєРѕР»РµРЅРё, РЅРѕРіРё РїРѕРґРєРѕСЃРёР»РёСЃСЊ, Рё РѕРЅР° СѓРїР°Р»Р° РЅР° СЃРїРёРЅСѓ, РєРѕРіРґР° РІ РµС‘ РјРёРєСЂРѕС„РѕРЅРµ СЂР°Р·РґР°Р»СЃСЏ РіСЂРѕРјРєРёР№ Р·РІСѓРє С€Р»РµРїРєР°. РџСЂРёРґСЏ РІ СЃРµР±СЏ, РґРµРІРѕС‡РєРµ РЅРµ РѕСЃС‚Р°Р»РѕСЃСЊ РЅРёС‡РµРіРѕ, РєСЂРѕРјРµ СЃРѕР¶Р°Р»РµРЅРёСЏ, РїРѕСЃРєРѕР»СЊРєСѓ РѕРЅР° РЅР°С‡Р°Р»Р° Р±РµР·СѓРґРµСЂР¶РЅРѕ СЂС‹РґР°С‚СЊ РЅР° РїРѕР»Сѓ, РєР°Рє СЂРµР±С‘РЅРѕРє.
 
-— Мацури… — сказала Фубуки, ошеломлённая видом своей подруги, которая выглядела точно так же, как во время последней аварии. Вина ударила её, как грузовик. Она знала, что обманула, чтобы сохранить лицо, и теперь из-за этого страдает один из её самых близких друзей. Девушка-лиса посмотрела на своё мокрое и грязное состояние, прежде чем решиться поступить правильно. «Эм… всё? Мне есть в чём признаться…»
+вЂ” РњР°С†СѓСЂРёвЂ¦ вЂ” СЃРєР°Р·Р°Р»Р° Р¤СѓР±СѓРєРё, РѕС€РµР»РѕРјР»С‘РЅРЅР°СЏ РІРёРґРѕРј СЃРІРѕРµР№ РїРѕРґСЂСѓРіРё, РєРѕС‚РѕСЂР°СЏ РІС‹РіР»СЏРґРµР»Р° С‚РѕС‡РЅРѕ С‚Р°Рє Р¶Рµ, РєР°Рє РІРѕ РІСЂРµРјСЏ РїРѕСЃР»РµРґРЅРµР№ Р°РІР°СЂРёРё. Р’РёРЅР° СѓРґР°СЂРёР»Р° РµС‘, РєР°Рє РіСЂСѓР·РѕРІРёРє. РћРЅР° Р·РЅР°Р»Р°, С‡С‚Рѕ РѕР±РјР°РЅСѓР»Р°, С‡С‚РѕР±С‹ СЃРѕС…СЂР°РЅРёС‚СЊ Р»РёС†Рѕ, Рё С‚РµРїРµСЂСЊ РёР·-Р·Р° СЌС‚РѕРіРѕ СЃС‚СЂР°РґР°РµС‚ РѕРґРёРЅ РёР· РµС‘ СЃР°РјС‹С… Р±Р»РёР·РєРёС… РґСЂСѓР·РµР№. Р”РµРІСѓС€РєР°-Р»РёСЃР° РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° СЃРІРѕС‘ РјРѕРєСЂРѕРµ Рё РіСЂСЏР·РЅРѕРµ СЃРѕСЃС‚РѕСЏРЅРёРµ, РїСЂРµР¶РґРµ С‡РµРј СЂРµС€РёС‚СЊСЃСЏ РїРѕСЃС‚СѓРїРёС‚СЊ РїСЂР°РІРёР»СЊРЅРѕ. В«Р­РјвЂ¦ РІСЃС‘? РњРЅРµ РµСЃС‚СЊ РІ С‡С‘Рј РїСЂРёР·РЅР°С‚СЊСЃСЏвЂ¦В»
 
-— Х-а? Мацури повернулась со слезами на глазах к монитору только для того, чтобы быть потрясённой тем, что она стала свидетелем. Фубуки выставила шорты на щиколотки и трусики, наполненные какашками, напоказ всему миру.
+вЂ” РҐ-Р°? РњР°С†СѓСЂРё РїРѕРІРµСЂРЅСѓР»Р°СЃСЊ СЃРѕ СЃР»РµР·Р°РјРё РЅР° РіР»Р°Р·Р°С… Рє РјРѕРЅРёС‚РѕСЂСѓ С‚РѕР»СЊРєРѕ РґР»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ Р±С‹С‚СЊ РїРѕС‚СЂСЏСЃС‘РЅРЅРѕР№ С‚РµРј, С‡С‚Рѕ РѕРЅР° СЃС‚Р°Р»Р° СЃРІРёРґРµС‚РµР»РµРј. Р¤СѓР±СѓРєРё РІС‹СЃС‚Р°РІРёР»Р° С€РѕСЂС‚С‹ РЅР° С‰РёРєРѕР»РѕС‚РєРё Рё С‚СЂСѓСЃРёРєРё, РЅР°РїРѕР»РЅРµРЅРЅС‹Рµ РєР°РєР°С€РєР°РјРё, РЅР°РїРѕРєР°Р· РІСЃРµРјСѓ РјРёСЂСѓ.
 
-«Я-я была плохой девочкой», — пошутила она. «Я снова покакала в свои трусики во время стрима… как ребёнок, которым я являюсь…» Фубуки сильно покраснела от слов, вылетевших из её рта, и её сопровождающих действий, но в глубине души она знала, что для того, чтобы всё исправить, ей нужно унизить себя до большей степени, чем несчастный случай с Мацури.
+В«РЇ-СЏ Р±С‹Р»Р° РїР»РѕС…РѕР№ РґРµРІРѕС‡РєРѕР№В», вЂ” РїРѕС€СѓС‚РёР»Р° РѕРЅР°. В«РЇ СЃРЅРѕРІР° РїРѕРєР°РєР°Р»Р° РІ СЃРІРѕРё С‚СЂСѓСЃРёРєРё РІРѕ РІСЂРµРјСЏ СЃС‚СЂРёРјР°вЂ¦ РєР°Рє СЂРµР±С‘РЅРѕРє, РєРѕС‚РѕСЂС‹Рј СЏ СЏРІР»СЏСЋСЃСЊвЂ¦В» Р¤СѓР±СѓРєРё СЃРёР»СЊРЅРѕ РїРѕРєСЂР°СЃРЅРµР»Р° РѕС‚ СЃР»РѕРІ, РІС‹Р»РµС‚РµРІС€РёС… РёР· РµС‘ СЂС‚Р°, Рё РµС‘ СЃРѕРїСЂРѕРІРѕР¶РґР°СЋС‰РёС… РґРµР№СЃС‚РІРёР№, РЅРѕ РІ РіР»СѓР±РёРЅРµ РґСѓС€Рё РѕРЅР° Р·РЅР°Р»Р°, С‡С‚Рѕ РґР»СЏ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РІСЃС‘ РёСЃРїСЂР°РІРёС‚СЊ, РµР№ РЅСѓР¶РЅРѕ СѓРЅРёР·РёС‚СЊ СЃРµР±СЏ РґРѕ Р±РѕР»СЊС€РµР№ СЃС‚РµРїРµРЅРё, С‡РµРј РЅРµСЃС‡Р°СЃС‚РЅС‹Р№ СЃР»СѓС‡Р°Р№ СЃ РњР°С†СѓСЂРё.
 
-«Фубуки…» Мацури посмотрела на экран, её слёзы высохли, ошеломлённая тем, что делала её подруга. Однако через несколько секунд она не смогла удержаться от смеха. «Ха-ха-ха, я знал, что ты ещё ребёнок! Пришлось схитрить, чтобы попасть в большой женский клуб!»
+В«Р¤СѓР±СѓРєРёвЂ¦В» РњР°С†СѓСЂРё РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° СЌРєСЂР°РЅ, РµС‘ СЃР»С‘Р·С‹ РІС‹СЃРѕС…Р»Рё, РѕС€РµР»РѕРјР»С‘РЅРЅР°СЏ С‚РµРј, С‡С‚Рѕ РґРµР»Р°Р»Р° РµС‘ РїРѕРґСЂСѓРіР°. РћРґРЅР°РєРѕ С‡РµСЂРµР· РЅРµСЃРєРѕР»СЊРєРѕ СЃРµРєСѓРЅРґ РѕРЅР° РЅРµ СЃРјРѕРіР»Р° СѓРґРµСЂР¶Р°С‚СЊСЃСЏ РѕС‚ СЃРјРµС…Р°. В«РҐР°-С…Р°-С…Р°, СЏ Р·РЅР°Р», С‡С‚Рѕ С‚С‹ РµС‰С‘ СЂРµР±С‘РЅРѕРє! РџСЂРёС€Р»РѕСЃСЊ СЃС…РёС‚СЂРёС‚СЊ, С‡С‚РѕР±С‹ РїРѕРїР°СЃС‚СЊ РІ Р±РѕР»СЊС€РѕР№ Р¶РµРЅСЃРєРёР№ РєР»СѓР±!В»
 
-«Привет! Я делаю это, чтобы ты почувствовал себя лучше!» Фубуки раздражённо хлопнул в ответ.
+В«РџСЂРёРІРµС‚! РЇ РґРµР»Р°СЋ СЌС‚Рѕ, С‡С‚РѕР±С‹ С‚С‹ РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р» СЃРµР±СЏ Р»СѓС‡С€Рµ!В» Р¤СѓР±СѓРєРё СЂР°Р·РґСЂР°Р¶С‘РЅРЅРѕ С…Р»РѕРїРЅСѓР» РІ РѕС‚РІРµС‚.
 
-«И я делаю!» — сказал Мацури в приступе смеха, прежде чем успокоиться и сказать: «Спасибо».
+В«Р СЏ РґРµР»Р°СЋ!В» вЂ” СЃРєР°Р·Р°Р» РњР°С†СѓСЂРё РІ РїСЂРёСЃС‚СѓРїРµ СЃРјРµС…Р°, РїСЂРµР¶РґРµ С‡РµРј СѓСЃРїРѕРєРѕРёС‚СЊСЃСЏ Рё СЃРєР°Р·Р°С‚СЊ: В«РЎРїР°СЃРёР±РѕВ».
 
-«О боже мой, это было так мило!» — вмешался Тамаки, испортив момент. «Но поскольку все мы сейчас сидим в одиночестве, я не думаю, что могу назвать эту игру иначе, как ничьей. И так просто не пойдёт, не так ли, ребята?» Тамаки наблюдал, как его чат соглашался с ним, сообщения перемещались по экрану с рекордной скоростью. «Думаю, нам просто придётся сделать это снова на следующей неделе! Девочки, вы спустились? Двое друзей секунду смотрели на свои экраны, прежде чем каждый широко улыбнулся.
+В«Рћ Р±РѕР¶Рµ РјРѕР№, СЌС‚Рѕ Р±С‹Р»Рѕ С‚Р°Рє РјРёР»Рѕ!В» вЂ” РІРјРµС€Р°Р»СЃСЏ РўР°РјР°РєРё, РёСЃРїРѕСЂС‚РёРІ РјРѕРјРµРЅС‚. В«РќРѕ РїРѕСЃРєРѕР»СЊРєСѓ РІСЃРµ РјС‹ СЃРµР№С‡Р°СЃ СЃРёРґРёРј РІ РѕРґРёРЅРѕС‡РµСЃС‚РІРµ, СЏ РЅРµ РґСѓРјР°СЋ, С‡С‚Рѕ РјРѕРіСѓ РЅР°Р·РІР°С‚СЊ СЌС‚Сѓ РёРіСЂСѓ РёРЅР°С‡Рµ, РєР°Рє РЅРёС‡СЊРµР№. Р С‚Р°Рє РїСЂРѕСЃС‚Рѕ РЅРµ РїРѕР№РґС‘С‚, РЅРµ С‚Р°Рє Р»Рё, СЂРµР±СЏС‚Р°?В» РўР°РјР°РєРё РЅР°Р±Р»СЋРґР°Р», РєР°Рє РµРіРѕ С‡Р°С‚ СЃРѕРіР»Р°С€Р°Р»СЃСЏ СЃ РЅРёРј, СЃРѕРѕР±С‰РµРЅРёСЏ РїРµСЂРµРјРµС‰Р°Р»РёСЃСЊ РїРѕ СЌРєСЂР°РЅСѓ СЃ СЂРµРєРѕСЂРґРЅРѕР№ СЃРєРѕСЂРѕСЃС‚СЊСЋ. В«Р”СѓРјР°СЋ, РЅР°Рј РїСЂРѕСЃС‚Рѕ РїСЂРёРґС‘С‚СЃСЏ СЃРґРµР»Р°С‚СЊ СЌС‚Рѕ СЃРЅРѕРІР° РЅР° СЃР»РµРґСѓСЋС‰РµР№ РЅРµРґРµР»Рµ! Р”РµРІРѕС‡РєРё, РІС‹ СЃРїСѓСЃС‚РёР»РёСЃСЊ? Р”РІРѕРµ РґСЂСѓР·РµР№ СЃРµРєСѓРЅРґСѓ СЃРјРѕС‚СЂРµР»Рё РЅР° СЃРІРѕРё СЌРєСЂР°РЅС‹, РїСЂРµР¶РґРµ С‡РµРј РєР°Р¶РґС‹Р№ С€РёСЂРѕРєРѕ СѓР»С‹Р±РЅСѓР»СЃСЏ.
 
-«Ага».
+В«РђРіР°В».
 
